[package]
name = "aitp-rs-adapter"
description = "Subprocess conformance adapter for the aitp-rs reference implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
aitp-core = { path = "../aitp-core", version = "0.1.0-alpha.4" }
aitp-crypto = { path = "../aitp-crypto", version = "0.1.0-alpha.4" }
aitp-manifest = { path = "../aitp-manifest", version = "0.1.0-alpha.4" }
aitp-handshake = { path = "../aitp-handshake", version = "0.1.0-alpha.4" }
aitp-tct = { path = "../aitp-tct", version = "0.1.0-alpha.4" }
aitp-delegation = { path = "../aitp-delegation", version = "0.1.0-alpha.4" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
