[package]
name = "aitp-rs-adapter"
description = "Subprocess conformance adapter for the aitp-rs reference implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
aitp-core = { path = "../aitp-core", version = "0.3.0" }
aitp-crypto = { path = "../aitp-crypto", version = "0.3.0" }
aitp-manifest = { path = "../aitp-manifest", version = "0.3.0" }
aitp-handshake = { path = "../aitp-handshake", version = "0.3.0" }
aitp-tct = { path = "../aitp-tct", version = "0.3.0" }
aitp-delegation = { path = "../aitp-delegation", version = "0.3.0" }
aitp-session-bundle = { path = "../aitp-session-bundle", version = "0.3.0" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
