[package]
name = "aitp-tct"
description = "Trust Context Token (TCT) issuance and verification for AITP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
aitp-core = { path = "../aitp-core", version = "0.1.0-alpha.4" }
aitp-crypto = { path = "../aitp-crypto", version = "0.1.0-alpha.4" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
boon = { workspace = true }
hex = { workspace = true }
