[package]
name = "aitp-tct"
description = "Trust Context Token (TCT) issuance and verification for AITP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[features]
default = []
# In-band TCT renewal (RFC-AITP-0004 §8.1, post-v0.1). RFC-AITP-0004 §8
# states v0.1 implementations MUST NOT use an expired peer TCT and that
# there is no in-band renewal message in v0.1. The renewal flow is
# preserved here as an opt-in convenience for deployments that have
# upgraded to a post-v0.1 profile and want to skip a fresh handshake on
# TCT expiry. Off by default.
experimental-renewal = []

[dependencies]
aitp-core = { path = "../aitp-core", version = "0.2.0" }
aitp-crypto = { path = "../aitp-crypto", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
boon = { workspace = true }
hex = { workspace = true }
