[package]
name = "aitp"
description = "Agent Identity & Trust Protocol — facade crate re-exporting the protocol crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[features]
default = ["http-client"]
http-client = ["aitp-transport-http/client"]
http-server = ["aitp-transport-http/server"]
all = ["http-client", "http-server"]

[dependencies]
aitp-core = { path = "../aitp-core", version = "0.1.0-rc.1" }
aitp-crypto = { path = "../aitp-crypto", version = "0.1.0-rc.1" }
aitp-manifest = { path = "../aitp-manifest", version = "0.1.0-rc.1" }
aitp-handshake = { path = "../aitp-handshake", version = "0.1.0-rc.1" }
aitp-tct = { path = "../aitp-tct", version = "0.1.0-rc.1" }
aitp-delegation = { path = "../aitp-delegation", version = "0.1.0-rc.1" }
aitp-session-bundle = { path = "../aitp-session-bundle", version = "0.1.0-rc.1" }
aitp-transport-http = { path = "../aitp-transport-http", version = "0.1.0-rc.1", optional = false }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
