[package]
name = "aitp"
description = "Agent Identity & Trust Protocol — facade crate re-exporting the protocol crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[features]
default = ["http-client"]
http-client = ["aitp-transport-http/client"]
http-server = ["aitp-transport-http/server"]
# In-band TCT renewal (RFC-AITP-0004 §8.1, post-v0.1). Re-exports the
# `aitp-tct/experimental-renewal` gate and enables `renew_tct` /
# `TctStore::needs_refresh` in `aitp::facade`.
experimental-renewal = [
    "aitp-tct/experimental-renewal",
    "aitp-transport-http/experimental-renewal",
]
# Session Trust Bundle (RFC-AITP-0010, Draft). Gates the
# `aitp::session_bundle` re-export. Bundle conformance fixtures and
# adapter ops require the matching runner-side opt-in.
experimental-session-bundle = [
    "dep:aitp-session-bundle",
    "aitp-transport-http/experimental-session-bundle",
]
all = ["http-client", "http-server"]

[dependencies]
aitp-core = { path = "../aitp-core", version = "0.2.0" }
aitp-crypto = { path = "../aitp-crypto", version = "0.2.0" }
aitp-manifest = { path = "../aitp-manifest", version = "0.2.0" }
aitp-handshake = { path = "../aitp-handshake", version = "0.2.0" }
aitp-tct = { path = "../aitp-tct", version = "0.2.0" }
aitp-delegation = { path = "../aitp-delegation", version = "0.2.0" }
aitp-session-bundle = { path = "../aitp-session-bundle", version = "0.2.0", optional = true }
aitp-transport-http = { path = "../aitp-transport-http", version = "0.2.0", optional = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
# Used by `TctStore` for non-poisoning lock semantics — a poisoned
# `std::sync::RwLock` would silently turn every subsequent
# `insert`/`get`/`remove` into a no-op (the prior `if let Ok(..)`
# pattern), masking bugs and degrading the store to "TCT cache always
# misses" without any error path. parking_lot's locks never poison, so
# a panic in one critical section does not corrupt subsequent ones.
parking_lot = { workspace = true }
