[package]
name = "aitp-example-two-agents"
description = "Two-agent demo showing a complete AITP handshake and TCT exchange"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "agent-a"
path = "src/bin/agent-a.rs"

[[bin]]
name = "agent-b"
path = "src/bin/agent-b.rs"

[[bin]]
name = "revocation-demo"
path = "src/bin/revocation-demo.rs"

[[bin]]
name = "tct-renewal-demo"
path = "src/bin/tct-renewal-demo.rs"
required-features = ["experimental-renewal"]

[[bin]]
name = "oidc-demo"
path = "src/bin/oidc-demo.rs"

[[bin]]
name = "delegation-demo"
path = "src/bin/delegation-demo.rs"

[features]
experimental-renewal = ["aitp/experimental-renewal"]

[dependencies]
aitp = { path = "../../crates/aitp", version = "0.3.0", features = ["all"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
serde_json = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
# For the OIDC mock issuer demo: build JWTs over an in-process
# Ed25519 keypair so the demo runs without an HTTP IdP.
ed25519-dalek = { workspace = true }
base64ct = { workspace = true }
jsonwebtoken = { workspace = true }
