[package]
name = "aitp-e2e-llm-tests"
version = "0.0.0"
edition = "2021"
publish = false
description = "Tier-3 end-to-end tests: real LLM-driven agents handshaking via AITP."

# This package is intentionally EXCLUDED from the root workspace
# (see ../../Cargo.toml's `[workspace] exclude`) so it does not run
# under `cargo test --workspace` and cannot pull network-dependent
# crates into CI by accident. Run it explicitly from this directory:
#
#   cd tests/e2e-llm
#   AITP_RUN_LLM_TESTS=1 cargo test -- --nocapture
#
# See README.md for the full gating story.

[dependencies]
# AITP protocol + the two-agents example's manifest/envelope helpers.
aitp = { path = "../../crates/aitp", features = ["all"] }
aitp-example-two-agents = { path = "../../examples/two-agents" }

# Async runtime + HTTP server/client.
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
parking_lot = "0.12"

# Wire types.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"

# Error handling + .env loading.
anyhow = "1"
dotenvy = "0.15"

# Logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
# (intentionally empty — main deps cover the tests)
