[package]
name = "mint-signed-examples"
description = "Mint cryptographically valid AITP example artifacts from the spec's pinned KAT keypairs (closes BLOCKED-SPEC-EXAMPLE / agentidentitytrustprotocol#5)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
aitp-core = { path = "../../crates/aitp-core", version = "0.4.1" }
aitp-crypto = { path = "../../crates/aitp-crypto", version = "0.4.1" }
aitp-manifest = { path = "../../crates/aitp-manifest", version = "0.4.1" }
aitp-tct = { path = "../../crates/aitp-tct", version = "0.4.1" }
aitp-delegation = { path = "../../crates/aitp-delegation", version = "0.4.1" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
